--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,5 +1,7 @@
 /* Add CSS rules to override Primer */
 
-code {
+code, pre {
     overflow: scroll;
+    font-family: ui-monospace, SFMono-Regular, SF Mono, Menlo, Consolas, Liberation Mono, monospace !important;
+    font-size: 1rem !important;
 }
